--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ db.sqlite3
 .env
 *.pyc
 
-# Migrations (optional if you want fresh state always)
+# Migrations (optional - start fresh state always)
 **/migrations/*.py
 !**/migrations/__init__.py
 
