--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,14 @@ __pycache__/
 *.log
 
 # Django
+db.sqlite3
+*.sqlite3
+.env
 *.pyc
 
-<<<<<<< HEAD
-
-=======
 # Migrations (optional if you want fresh state always)
->>>>>>> feature/login
+**/migrations/*.py
+!**/migrations/__init__.py
 
 # VS Code
 .vscode/
